libs/@local/hashql/eval/tests/ui/graph/read/entity/no-path.jsonc
//@ run: fail
//@ description: Read entity by UUID using scalar property filter
// biome-ignore format: readability
["::core::graph::tail::collect",
  ["::core::graph::body::filter",
    ["::core::graph::head::entities", ["::core::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        "vertex",
        //~^ ERROR Cannot query against this complex object
        "vertex"
        //~^ ERROR Cannot query against this complex object
      ]
    ]
  ]
]
